reinstate search bar

--- a/site/index.html
+++ b/site/index.html
@@ -399,11 +399,11 @@
 </tr>
 <tr>
 <td align="left">6. <a href="6_automate_fileprocessing_find_xargs/">Automating File-Processing with find and xargs</a></td>
-<td align="left"></td>
+<td align="left">Search files by pattern with <code>find</code> and use <code>xargs</code> to execute a command for those objects matching the pattern</td>
 </tr>
 <tr>
 <td align="left">7. <a href="puzzles/">Puzzles</a> 🧩</td>
-<td align="left"></td>
+<td align="left">Can you use shell scripts to solve these "real" life challenged in molecular biology ?</td>
 </tr>
 </tbody>
 </table>
