gh-deploy commits

--- a/site/puzzles/index.html
+++ b/site/puzzles/index.html
@@ -397,9 +397,9 @@
 <details class="question">
 <summary>The secondary and tertiary structures of DNA</summary>
 <p>In DNA strings, symbols 'A' and 'T' are complements of each other, as are 'C' and 'G'.</p>
-<p>The reverse complement of a DNA string <em>s</em> is the string <em>s<sup>c</sup></em> formed by reversing the symbols of <em>s</em> then taking the complement of each symbol (e.g., the reverse complement of "GTCA" is "TGAC").</p>
+<p>The reverse complement of a DNA string <strong><em>s</em></strong> is the string <strong><em>s<sup>c</sup></em></strong> formed by reversing the symbols of <em>s</em> then taking the complement of each symbol (e.g., the reverse complement of "GTCA" is "TGAC").</p>
 <p><strong>Given:</strong> A DNA string s of length at most 1000 bp.</p>
-<p><strong>Return:</strong> The reverse complement <em>s<sup>c</sup></em> of <em>s</em>.</p>
+<p><strong>Return:</strong> The reverse complement <strong><em>s<sup>c</sup></em></strong> of <strong><em>s</em></strong>.</p>
 </details>
 
               
