change public  key

--- a/public/puzzles/index.html
+++ b/public/puzzles/index.html
@@ -488,7 +488,7 @@
 <p><strong>Return:</strong> The reverse complement <span class="arithmatex">\(s^{c}\)</span> of <span class="arithmatex">\(s\)</span>.</p>
 <details class="success">
 <summary>Solution</summary>
-<div class="tabbed-set tabbed-alternate" data-tabs="2:3"><input checked="checked" id="__tabbed_2_1" name="__tabbed_2" type="radio" /><input id="__tabbed_2_2" name="__tabbed_2" type="radio" /><input id="__tabbed_2_3" name="__tabbed_2" type="radio" /><div class="tabbed-labels"><label for="__tabbed_2_1">bash</label><label for="__tabbed_2_2">R</label><label for="__tabbed_2_3">Julia</label></div>
+<div class="tabbed-set tabbed-alternate" data-tabs="2:2"><input checked="checked" id="__tabbed_2_1" name="__tabbed_2" type="radio" /><input id="__tabbed_2_2" name="__tabbed_2" type="radio" /><div class="tabbed-labels"><label for="__tabbed_2_1">bash</label><label for="__tabbed_2_2">Julia</label></div>
 <div class="tabbed-content">
 <div class="tabbed-block">
 <p>There are multiple ways to do this 
@@ -511,7 +511,6 @@
 </li>
 </ul>
 </div>
-<div class="tabbed-block"></div>
 <div class="tabbed-block"></div>
 </div>
 </div>
