--- a/public/puzzles/index.html
+++ b/public/puzzles/index.html
@@ -614,7 +614,7 @@
 <p>A string is simply an ordered collection of symbols selected from some alphabet and formed into a word; the length of a string is the number of symbols that it contains.</p>
 <p>An example of a length 21 DNA string (whose alphabet contains the symbols 'A', 'C', 'G', and 'T') is "ATGCTTCAGAAAGGTCTTACG."</p>
 <p><strong>Given:</strong> A DNA string <span class="arithmatex">\(s\)</span> of length at most 1000 nt.</p>
-<p><strong>Return:</strong> Four integers (separated by spaces) counting the respective number of times that the symbols 'A', 'C', 'G', and 'T' occur in s</p>
+<p><strong>Return:</strong> Four integers (separated by spaces) counting the respective number of times that the symbols 'A', 'C', 'G', and 'T' occur in <span class="arithmatex">\(s\)</span></p>
 <details class="success">
 <summary>Solution</summary>
 <div class="tabbed-set tabbed-alternate" data-tabs="3:3"><input checked="checked" id="__tabbed_3_1" name="__tabbed_3" type="radio" /><input id="__tabbed_3_2" name="__tabbed_3" type="radio" /><input id="__tabbed_3_3" name="__tabbed_3" type="radio" /><div class="tabbed-labels"><label for="__tabbed_3_1">bash</label><label for="__tabbed_3_2">Python</label><label for="__tabbed_3_3">Rust</label></div>
