change lesson order

--- a/public/index.html
+++ b/public/index.html
@@ -458,11 +458,11 @@
 </tr>
 <tr>
 <td align="left">5. <a href="4_inspectmanipluate/">Inspecting and Manipulating Text Data with UNIX Tools - Part 1</a></td>
-<td align="left">Inspect file/s with utilities such as <code>head</code>,<code>less</code>. Extracting and formatting tabular data. Magical <code>grep</code>. Substitute matching patterns with <code>sed</code></td>
+<td align="left">Inspect file/s with utilities such as <code>head</code>,<code>less</code>. Extracting and formatting tabular data. Magical <code>grep</code>.</td>
 </tr>
 <tr>
 <td align="left">6. <a href="5_inspectmanipulate2/">Inspecting and Manipulating Text Data with UNIX Tools - Part 2</a></td>
-<td align="left">Text processing with <code>awk</code> and <code>bioawk</code></td>
+<td align="left">Substitute matching patterns with <code>sed</code>. Text processing with <code>awk</code> and <code>bioawk</code></td>
 </tr>
 <tr>
 <td align="left">7. <a href="6_automate_fileprocessing_find_xargs/">Automating File-Processing with find and xargs</a></td>
