gh-deploy commits

--- a/public/4_inspectmanipluate/index.html
+++ b/public/4_inspectmanipluate/index.html
@@ -562,6 +562,9 @@
 <li>use <code>sort</code>, <code>uniq</code>, <code>join</code> to manipulate the one or multiple files at once</li>
 </ul>
 </div>
+<p><center>
+<img alt="image" src="../images/inspect_1.png" width="350" />
+</center></p>
 <p>Many formats in bioinformatics are simple tabular plain-text files delimited by a character. The most common tabular plain-text file format used in bioinformatics is tab-delimited. Bioinformatics evolved to favor tab-delimited formats because of the convenience of working with these files using Unix tools.</p>
 <div class="admonition info">
 <p class="admonition-title">Tabular Plain-Text Data Formats</p>
