gh-deploy commits

--- a/public/5_inspectmanipulate2/index.html
+++ b/public/5_inspectmanipulate2/index.html
@@ -816,7 +816,7 @@ position - start position) was greater than 18. Awk supports arithmetic with the
 </blockquote>
 <div class="admonition info">
 <ul>
-<li>First pattern, <code>$1 ~ /chr1</code> specifies the regular expression (All Regular expressions are in slashes).  We are mating the first field, <code>$1</code> against the regular expression <code>chr1</code>. </li>
+<li>First pattern, <code>$1 ~ /chr1</code> specifies the regular expression (All Regular expressions are in slashes).  We are matching the first field, <code>$1</code> against the regular expression <code>chr1</code>. </li>
 <li>Tilde <code>~</code> means <strong>match</strong>.</li>
 <li>To do the inverse of <strong>match</strong>, we can use <code>!~</code> OR <code>!($1 ~ /chr1/</code></li>
 </ul>
