difference bw GTF vs BED

--- a/public/5_inspectmanipulate2/index.html
+++ b/public/5_inspectmanipulate2/index.html
@@ -856,7 +856,7 @@ position - start position) was greater than 18. Awk supports arithmetic with the
 <p>Also, there are two special patterns <code>BEGIN</code> &amp; <code>END</code></p>
 <ul>
 <li><code>BEGIN</code> - specifies what to do before the first record is read in. Useful to initialise and set up variables</li>
-<li><code>END</code> - what to do after the last record's processing is complete. Useful to print data summaries ad the end of file processing</li>
+<li><code>END</code> - what to do after the last record's processing is complete. Useful to print data summaries at the end of file processing</li>
 </ul>
 </li>
 </ul>
