add array images

--- a/public/5_inspectmanipulate2/index.html
+++ b/public/5_inspectmanipulate2/index.html
@@ -897,7 +897,8 @@ position - start position) was greater than 18. Awk supports arithmetic with the
 </blockquote>
 <div class="admonition danger">
 <p class="admonition-title">Note</p>
-<p>Note that we subtract 1 from the start position to convert to <strong>BED</strong> format. This is because <strong>BED</strong> uses zero-indexing while GTF uses 1-indexing; This is a subtle detail, certainly one that’s been missed many times. In the midst of an analysis, it’s easy to miss these small details.</p>
+<p>Note that we subtract 1 from the start position to convert to <strong>BED</strong> format. This is because <strong>BED</strong> uses zero-indexing while GTF uses 1-indexing; .i.e. <em>"chr 1 100" in a GTF/GFF is "chr 0 100" in BED</em></p>
+<p>This is a subtle detail, certainly one that’s been missed many times. In the midst of an analysis, it’s easy to miss these small details.</p>
 </div>
 <ul>
 <li><code>awk</code> also has a very useful data structure known as an associative array. Associative arrays behave like Python’s dictionaries or hashes in other languages. We can create an associative array by simply assigning a value to a key. For example, suppose we wanted to count the number of features (third column) belonging to the gene “Lypla1.” We could do this by incrementing their values in an associative array:</li>
